--- a/src/TidyWindow.App/App.xaml
+++ b/src/TidyWindow.App/App.xaml
@@ -1,9 +1,8 @@
 ﻿<Application x:Class="TidyWindow.App.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TidyWindow.App"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:TidyWindow.App">
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
